# MapYourGrid

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: archive-gfl.yml  ci.yml  update-community-stats.yml  update-line-length.yml  update-power.yml
about-us/: index.html
about-us-blog/: index.html
archive/archive/: index.html
assets/javascripts/: awesome-filter-tags.js  gallery.js  gfl.js
awesome/: index.html
blog/20250908-BehindTheScenes/: index.html
blog/20250918-HIFLD/: index.html
blog/firstrename/: index.html
docs/: about-us-blog.md  about-us.md  aboutus_blog.md  awesome.md  code-of-mappers.md  faq.md  global-grid-data.md  good-first-lines.md  governance-handbook.md  impact.md  index.md  installation-instructions.md  map-it.md  mapping-good-practices.md  mission-statement.md  privacy-policy.md  progress.md  quality.md  questions.md  starter-kit.md  strategies.md  tools.md
es/: index.html
faq/: index.html
fr/: index.html
global-grid-data/: index.html
good-first-lines/: index.html
governance-handbook/: index.html
gridinspector/: index.html
impact/: index.html
installation-instructions/: index.html
map-it/: index.html
mapping-good-practices/: index.html
mission-statement/: index.html
overrides/: main.html
privacy-policy/: index.html
progress/: index.html
py-scripts/: awesome-list.py  power-ways.py
quality/: index.html
search/: search_index.json
starter-kit/: index.html
strategies/: index.html
stylesheets/: awesome_list.css  extra.css  landing.css
(+168 files in other folders)
