[project]
name = "mapyourgrid-website"
version = "0.1.0"
description = "MapYourGrid Website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-static-i18n>=1.3.0",
    "requests>=2.32.5",
]
